ok now the heading spacing is fixed and ESSAYS lines up with essay titles

--- a/essay-style.css
+++ b/essay-style.css
@@ -1,5 +1,6 @@
 #essay
 {
+	margin-top: 0;
     width: 715px;
     margin: 0px auto;
    	font-family: Arial, Helvetica, sans-serif;
