--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@ img{
 	margin-bottom: 3%;
 	}
 
+#site-branding a{
+	font-family: Arial, Helvetica, sans-serif;
+	margin: 0px auto;
+	text-align: center;
+	}
+
 #site-title {
 	margin-top: 3%;
   	font-size: 25px;
@@ -26,6 +32,7 @@ img{
 
 /* Style the links inside the navigation bar */
 #site-title a {
+	margin-top: 3%;
 	display: block;
 	text-decoration: underline;
 	color: black;
@@ -45,6 +52,7 @@ img{
 }
 
 #homepage {
+	margin-top: 0px;
 	overflow: hidden;
     width: 715px;
     margin: 0px auto;
@@ -61,4 +69,6 @@ img{
 
 #homepage .subpage-link{
 	text-align: center;
+}
+#film-essays {
 }
